# wdai

./: readme.md
lab0/: article.css  article.html  index.css  index.html  product-list.css  product-list.html  squares.css  squares.html
lab1/: article.html  index.css  index.html  product-list.css  product-list.html  squares.css  squares.html
lab3/: api-interactions.css  api-interactions.html  flappy-bird.css  flappy-bird.html  flappy-bird.js  index.css  index.html  password-generator.html  stopwatch.css  stopwatch.html
lab4/: compose.yaml
lab4/books/: Dockerfile  pyproject.toml  readme.md
lab4/books/src/: api.py  main.py
lab4/commons/: pyproject.toml
lab4/commons/src/commons.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lab4/commons/src/commons/auth/: auth.py  token.py
lab4/commons/src/commons/model/base/: base.py
lab4/commons/src/commons/model/domain/: book.py  order.py
lab4/commons/src/commons/model/orm/: book.py  order.py  user.py
lab4/commons/src/model/orm/: book.py  order.py  user.py
lab4/db/: ddl.sql
lab4/model/: base.py  pyproject.toml
lab4/model/domain/: book.py  user.py
lab4/model/orm/: book.py  order.py  user.py
lab4/model/src/model/base/: base.py
lab4/model/src/model/domain/: book.py  order.py  user.py
lab4/model/src/model/orm/: book.py  order.py  user.py
lab4/orders/: Dockerfile  pyproject.toml  readme.md
lab4/orders/src/: api.py  main.py
lab4/users/: Dockerfile  pyproject.toml  readme.md
miniproj/: README.md  slugGenerator.js
proj1/: .gitignore  README.md  about.html  draggablesSetup.js  faq.html  index.css  index.html  index.js  lib.js
proj1/server/: index.js  package.json
(+3 files in other folders)
