[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commons"
version = "0.1.0"
description = "Common ORM commons definitions"
requires-python = ">=3.9"
dependencies = [
    "psycopg[binary]>=3.2.13",
    "sqlalchemy==2.0.45",
]

[tool.setuptools.packages.find]
where = ["src"]

