[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commons"
version = "0.1.0"
description = "Common definitions"
requires-python = ">=3.9"
dependencies = [
    "cryptography>=46.0.3",
    "psycopg[binary]>=3.2.13",
    "pwdlib[argon2]>=0.2.1",
    "fastapi>=0.124.4",
    "pyjwt>=2.10.1",
    "sqlalchemy==2.0.45",
]

[tool.setuptools.packages.find]
where = ["src"]

