[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model"
version = "0.1.0"
description = "Common ORM model definitions"
requires-python = ">=3.9"
dependencies = [
    "sqlalchemy==2.0.45",
]

[tool.setuptools.packages.find]
where = ["src"]

